fix: solve problem of content overflowing on page of tourism spot information

--- a/src/assets/css/components/_card.scss
+++ b/src/assets/css/components/_card.scss
@@ -79,6 +79,8 @@
   }
 }
 .spot-picture {
+  width: 75px;
+  height: 75px;
   border-radius: 6px;
 }
 .spot-info {
